k8s/canary-upgrade/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
spec:
  selector:
    app: rollouts-demo
  ports:
  - name: http-rollouts-demo
    protocol: TCP
    port: 80
    targetPort: 8080
