k8s/canary-upgrade/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rollouts-demo
spec:
  host: rollouts-demo
  subsets:
  - name: stable
    labels:
      version: stable
  - name: canary
    labels:
      version: canary
